--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = 'mongodb+srv://danimran97:Bababoeey@mytasklist.3lwevge.mongodb.net/'
+MONGO_URI = "mongodb+srv://danimran97:bababooey@mytasklist.3lwevge.mongodb.net/?retryWrites=true&w=majority"
+MONGO_DB = mytasklist
